--- a/css/mw.css
+++ b/css/mw.css
@@ -17,8 +17,15 @@ a:hover {
 
 .navbar {
   width: 100%;
-  height: 45%;
+  height: 200px;
   background-color: #000000;
+}
+
+.logo {
+  background-size: 500px;
+  background-repeat: no-repeat;
+  background-color: #000000;
+  background-position: center;
 }
 
 .container {
