--- a/css/mw.css
+++ b/css/mw.css
@@ -7,6 +7,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  min-height: 500px;
+}
+
 ul {
   list-style-type: circle;
 }
@@ -55,14 +59,15 @@ a:hover {
 
 .container {
   width: 80%;
-  height: 50%;
+  height: 75%;
   background-color: #FFFFFF;
   padding: 2% 10% 2% 10%;
+  position: relative;
 }
 
 .mission-statement {
   font-size: 1.4em;
-  height: 50%;
+  height: 40%;
   padding: 0 5%;
   width: 90%;
   text-align: center;
@@ -71,6 +76,7 @@ a:hover {
 
 .featured-container {
   width: 840px;
+  /*height: 300%;*/
   margin: 0 auto;
   background-color: #FFFFFF;
 }
@@ -102,28 +108,42 @@ a:hover {
   opacity: 1.0;
 }
 
+.spinner {
+  width: 35px;
+  height: 35px;
+  border-radius: 100px;
+  font-size: 1.6em;
+  text-align: center;
+  margin: 10px 0 0 43%;
+}
+
 .featured-title {
   text-align: center;
   height: 83px;
   background-color: #000000;
   font-size: 1.2em;
   color: #FFFFFF;
-  margin-top: 2px;
+  padding-top: 2px;
 }
 
 .featured-image:hover + .featured-title, .featured-title:hover {
   color: #bababa;
 }
 
+.featured-site:hover > .spinner:hover {
+  -ms-transform: rotate(30deg); /* IE 9 */
+  -webkit-transform: rotate(30deg); /* Chrome, Safari, Opera */
+  transform: rotate(30deg);
+}
 
 .footer {
-  height: 10%;
-  width: 90%;
+  height: 30%;
+  width: 81%;
   border-top: solid #222;
-  margin: 270px 5% 10%;
-  position: static;
+  position: absolute;
   font-size: 0.8em;
   background-color: #FFFFFF;
+  bottom: 7;
 }
 
 .copyright {
@@ -140,10 +160,98 @@ a:hover {
   width: 49%;
 }
 
+@media screen and (max-width: 1054px) {
+  .featured-container {
+    width: 100%;
+    height: 100%;
+    margin-left: 3.5%;
+  }
+
+  .featured-site {
+    width: 30%;
+  }
+
+  .featured-image {
+    background-size: 109% 100%;
+    background-position: center;
+  }
+}
+
 @media screen and (max-width: 980px) {
+  .featured-container {
+    width: 100%;
+    height: 100%;
+    margin-left: 3.5%;
+  }
+
+  .featured-site {
+    width: 30%;
+    height: 250px;
+  }
+
+  .featured-image {
+    background-size: 100% 120%;
+    background-position: 0 0;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .featured-container {
+    width: 100%;
+    height: 360%;
+    margin-left: 10.2%;
+  }
+
+  .featured-site {
+    width: 80%;
+    height: 400px;
+    margin-bottom: 15px;
+  }
+
+  .featured-image {
+    background-size: 100%;
+    background-position: 0 0;
+  }
+
+  .featured-title {
+    padding-top: 13px;
+  }
+
+  .spinner {
+    margin: 5px 0 0 47.1%;
+  }
+}
+
+@media screen and (max-width: 825px) {
+  body {
+    min-height: 450px;
+  }
+  .featured-container {
+    width: 100%;
+    height: 380%;
+    margin-left: 10.2%;
+  }
+}
+
+@media screen and (max-width: 565px) {
+  body {
+    min-height: 500px;
+  }
+  .featured-container {
+    width: 100%;
+    height: 340%;
+    margin-left: 10.2%;
+  }
 
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 410px) {
+  .copyright {
+    font-size: 1em;
+  }
+
+  span.contact > a {
+    font-size: 0.9em;
+  }
 
 }
