--- a/css/mw.css
+++ b/css/mw.css
@@ -153,11 +153,15 @@ a:hover {
 .spinner {
   width: 35px;
   height: 35px;
+  border:4px double #222;
   border-radius: 100px;
   font-size: 1.6em;
   text-align: center;
-  margin: 10px 0 0 43%;
+  margin: 8px 0 0 41%;
   background-color: #FFFFFF;
+  transform: rotate(-90deg);
+  transition-duration: 0.7s;
+  transition-property: transform;
 }
 
 .featured-title {
@@ -173,10 +177,16 @@ a:hover {
   color: #bababa;
 }
 
-.featured-site:hover > .spinner:hover {
-  -ms-transform: rotate(30deg); /* IE 9 */
-  -webkit-transform: rotate(30deg); /* Chrome, Safari, Opera */
+/*.featured-site:hover > .spinner:hover {
+  -ms-transform: rotate(30deg);  IE 9
+  -webkit-transform: rotate(30deg);  Chrome, Safari, Opera
   transform: rotate(30deg);
+}*/
+
+.featured-site:hover .spinner {
+  transform: rotate(90deg);
+  transition-duration: 0.7s;
+  transition-property: transform;
 }
 
 .footer {
