--- a/css/mw.css
+++ b/css/mw.css
@@ -30,7 +30,7 @@ a:hover {
 .navbar {
   padding: 30px 0 0;
   overflow: visible;
-  height: 243px;
+  height: 214px;
 }
 
 .nav-container {
@@ -41,21 +41,21 @@ a:hover {
   position: relative;
 }
 
-.logo {
-  background-size: 325px;
+a .logo {
+  background-size: 278px;
   background-repeat: no-repeat;
   background-color: transparent;
   position: relative;
   top: 0;
-  width: 411px;
-  background-position: 43px center;
+  width: 321px;
+  background-position: 20px 0;
   margin: 0 auto;
-  z-index: -1000;
+  z-index: 1000;
 }
 
 .nav-links {
   padding: 0;
-  margin: -105px auto;
+  margin: -84px auto;
   width: 480px;
   height: 74px;
 }
@@ -72,7 +72,7 @@ a:hover {
   float: right;
   width: 44%;
   text-align: right;
-  margin-right: 12px;
+  margin-right: 10px;
   width: 20%;
   height: 25px;
 }
@@ -288,7 +288,7 @@ a:hover {
 }
 
 @media screen and (max-width: 620px) {
-  .logo {
+  a .logo {
     background-size: 140px;
     background-repeat: no-repeat;
     background-position: 6% 0;
