--- a/css/mw.css
+++ b/css/mw.css
@@ -27,6 +27,28 @@ a:hover {
   color: #666;
 }
 
+/*#sidr {
+  overflow: hidden;
+  height: 100%;*/
+  /*padding: 0;
+  /*margin: 0;*/
+/*}*/
+
+/*li.side-nav {*/
+  /*height: 50px;*/
+  /*padding: 0;*/
+  /*position: absolute;*/
+}
+
+/*.side-nav li {*/
+  /*margin-bottom: -770px;*/
+  /*padding: 0;*/
+/*}*/
+
+.site-wrapper {
+  height: 30%;
+}
+
 .navbar {
   padding: 30px 0 0;
   overflow: visible;
@@ -465,7 +487,7 @@ a:hover {
 
   .mission-statement {
     width: 90%;
-    height: 32%;
+    height: 30%;
     padding: 0 6.1%;
   }
 
