--- a/css/mw.css
+++ b/css/mw.css
@@ -27,28 +27,6 @@ a:hover {
   color: #666;
 }
 
-/*#sidr {
-  overflow: hidden;
-  height: 100%;*/
-  /*padding: 0;
-  /*margin: 0;*/
-/*}*/
-
-/*li.side-nav {*/
-  /*height: 50px;*/
-  /*padding: 0;*/
-  /*position: absolute;*/
-}
-
-/*.side-nav li {*/
-  /*margin-bottom: -770px;*/
-  /*padding: 0;*/
-/*}*/
-
-.site-wrapper {
-  height: 30%;
-}
-
 .navbar {
   padding: 30px 0 0;
   overflow: visible;
@@ -65,13 +43,13 @@ a:hover {
 
 .logo {
   display: block;
-  background-size: 208px; /*278px;*/
+  background-size: 208px;
   background-repeat: no-repeat;
   background-color: transparent;
   position: relative;
   top: 0;
   width: 321px;
-  background-position: 56px 19px; /*20px 0;*/
+  background-position: 56px 19px;
   margin: 0 auto;
   z-index: 100;
 }
@@ -79,7 +57,7 @@ a:hover {
 .logo-link {
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 500;
 }
 
 .nav-links {
@@ -95,11 +73,11 @@ a:hover {
 
 .nav-menu-link {
   text-decoration: none;
+  z-index: 999;
 }
 
 .contact-link {
   float: right;
-  width: 44%;
   text-align: right;
   margin-right: 10px;
   width: 20%;
@@ -143,7 +121,6 @@ a:hover {
 
 .nav-dropdown {
   margin-top: 26px;
-  /*display: none;*/
 }
 
 .nav-dropdown li a {
@@ -274,11 +251,6 @@ a:hover {
   color: #000000;
   font-size: 1.1em;}
 
-/*.contact-email {
-  float: right;
-  text-align: right;
-  width: 49%;
-}*/
 
 #response {
   display:none;
