--- a/css/sidr.css
+++ b/css/sidr.css
@@ -4,7 +4,6 @@
     box-shadow: 0 0 5px 5px #222 inset;
     color: #fff;
     display: none;
-    /*font-family: "lucida grande",tahoma,verdana,arial,sans-serif;*/
     font-size: 1em;
     height: 100%;
     overflow: hidden;
@@ -72,6 +71,7 @@
     border-top: 1px solid #4d4d4d;
     display: block;
     line-height: 48px;
+    height: 10%;
     /*margin: 0;*/
 }
 
@@ -82,6 +82,7 @@
 
 .sidr ul li:hover > a, .sidr ul li:hover > span, .sidr ul li.active > a, .sidr ul li.active > span, .sidr ul li.sidr-class-active > a, .sidr ul li.sidr-class-active > span {
     box-shadow: 0 0 15px 3px #222 inset;
+    color: #dadada;
 }
 
 .sidr ul li a, .sidr ul li span {
@@ -119,7 +120,7 @@
     padding-left: 30px;
 }
 
-.sidr form {
+/*.sidr form {
     margin: 0 15px;
 }
 
@@ -154,4 +155,4 @@
 
 .sidr input[type="button"]:hover, .sidr input[type="submit"]:hover {
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
-}
+}*/
