--- a/css/mw.css
+++ b/css/mw.css
@@ -42,17 +42,17 @@ a:hover {
 }
 
 .logo {
-    background-color: transparent;
-    background-position: 2px 2px;
-    background-repeat: no-repeat;
-    background-size: 208px auto;
-    display: block;
-    height: 136px;
-    margin: 0 auto;
-    position: relative;
-    top: 0;
-    width: 212px;
-    z-index: 100;
+  background-color: transparent;
+  background-position: 2px 2px;
+  background-repeat: no-repeat;
+  background-size: 208px auto;
+  display: block;
+  height: 136px;
+  margin: 0 auto;
+  position: relative;
+  top: 0;
+  width: 212px;
+  z-index: 100;
 }
 
 .logo-link {
@@ -163,8 +163,8 @@ a:hover {
   background-size: 100%;
   max-width: 1080px;
   background-position: center center;
-  margin: 0 auto;
-  height: 450px;
+  height: 630px;
+  margin: 68px auto -35px;
 }
 
 .mission-statement {
@@ -173,7 +173,7 @@ a:hover {
   width: 346px;
   text-align: center;
   background-color: #FFFFFF;
-  margin: 265px auto 150px;
+  margin: -107px auto 150px;
 }
 
 .featured-container {
@@ -313,6 +313,10 @@ a:hover {
     width: 82%;
   }
 
+  .main-img {
+    height: 570px;
+  }
+
   .featured-container {
     width: 100%;
     height: 100%;
@@ -346,6 +350,10 @@ a:hover {
     height: 450px;
   }
 
+  .main-img {
+    background-position: top center;
+  }
+
   .projects-container {
     width: 100%;
     height: 92%;
@@ -372,6 +380,10 @@ a:hover {
     width: 100%;
     height: 360%;
     margin-left: 10.2%;
+  }
+
+  .main-img {
+    height: 510px;
   }
 
   .projects-wrapper {
@@ -405,7 +417,11 @@ a:hover {
 }
 
 @media screen and (max-width: 825px) {
- .featured-container {
+  .main-img {
+    height: 482px;
+  }
+
+  .featured-container {
     width: 100%;
     height: 380%;
     margin-left: 10.2%;
@@ -417,8 +433,11 @@ a:hover {
     margin-left: 10.2%;
   }
 
-  .mission-statement {
-    margin: 250px auto;
+}
+
+@media screen and (max-width: 720px) {
+  .main-img {
+    height: 430px;
   }
 }
 
@@ -436,7 +455,7 @@ a:hover {
     .main-img {
     height: 45%;
     margin-top: 15px;
-    background-position: top center;
+    min-height: 369px;
   }
 
   .nav-container {
@@ -460,7 +479,6 @@ a:hover {
   .mission-statement {
     font-size: 1.3em;
     width: 270px;
-    margin: -103px auto;
   }
 
   .projects-wrapper {
@@ -477,6 +495,11 @@ a:hover {
     width: 100%;
     height: 245%;
     margin-left: 10.5%;
+  }
+
+  .main-img {
+    height: 184px;
+    min-height: 304px;
   }
 
   .projects-wrapper {
@@ -507,6 +530,11 @@ a:hover {
 @media screen and (max-width: 410px) {
   .projects-wrapper {
     height: 405px;
+  }
+
+  .main-img {
+    height: 35%;
+    min-height: 250px
   }
 
   .featured-container {
